--- a/cardiowave/pubspec.yaml
+++ b/cardiowave/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  file_picker: ^6.1.1
   flutter:
     sdk: flutter
+  pdf: ^3.10.7
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +19,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/logo.png
+    - assets/images/loading_page.png
